--- a/config/database.yml
+++ b/config/database.yml
@@ -21,7 +21,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   adapter: sqlite3
-  database: db/production.sqlite3
+  database: db/test.sqlite3
   # adapter: postgresql
   # database: tts_test
   # username: myapp
